--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
 :root {
   --pozadina: #F4F3F2;
   --bela: #ffffff;
+  --dark: #ffffffaa;
   --crna: #1C1C1C;  
   --zuta: #FFA90A;
   --siva: #e6e6e6;
@@ -81,7 +82,10 @@ address { font-style: normal; }
   #REUSED STYLE
 \*-----------------------------------*/
 
-.container { padding-inline: 15px; }
+.container { 
+  padding-inline: 15px;
+  max-width: 1200px; 
+}
 
 .h2,
 .h3 { font-family: 'Source Sans Pro', sans-serif; }
@@ -90,7 +94,7 @@ address { font-style: normal; }
 
 .w-100 { width: 100%; }
 
-.banner-animation { 
+.animation { 
   animation: waveAnim 2s linear infinite alternate; 
 }
 @keyframes waveAnim {
@@ -98,6 +102,9 @@ address { font-style: normal; }
   100% { transform: translate(2px, 2px) rotate(1deg); }
 }
 section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-block: 60px;
 }
 .underline { 
@@ -137,7 +144,12 @@ section{
   border-radius: 5px 25px;
   transition: 0.35s ease;
 }
+.btn ion-icon{
+  font-size: 23px;
+  margin-left: 5%;
+}
 .btn:is(:hover, :focus) { 
+  color: var(--bela);
   background-position: right;
 }
 .naslov {
@@ -149,120 +161,83 @@ section{
 }
 
 /*---------------HEADER----------------*/ 
-.header {
-  color: var(--bela);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding-block: 20px;
-  z-index: 4;
-  transition: 0.15s ease;
-}
-.header.active {
-  color: var(--plava);
-  position: fixed;
-  background-color: var(--bela);
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
-}
-.header .container {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 30px;
+  width: 100%;
+  padding: 20px 150px;
+  position: absolute;
+  z-index: 1000;
+  transition: 0.3s ease-in-out;
+  background: transparent;
 }
-.logo {
-  color: var(--color);
+header ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+header ul li a {
+  display: flex;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--bela);
+  padding: 10px 20px;
+  transition: 0.3s;
+}
+header ul li a:hover {
+  color: var(--dark);
+  transform: translateY(1px);
+}
+header .logo {
+  display: flex;
+  align-items: center;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 3rem;
   font-weight: 700;
+  color: var(--bela);
+  transition: 0.3s;
 }
-.logo img {
-  display: inline-block;
+header .logo:hover {
+  color: var(--dark);
+  transform: translateY(1px);
+}
+header .logo img {
   width: 50px;
-  vertical-align: middle;
-  margin-right: 10px;
+  height: auto;
+  margin-right: 15px;
+  transition: 0.3s;
 }
-.nav-open-btn {
-  color: var(--color);
-  font-size: 3.8rem;
-  padding: 4px;
+header .logo:hover img {
+  transform: rotate(360deg);
 }
-.navbar {
-  background-color: var(--bela);
-  position: fixed;
-  top: 0;
-  left: -280px;
-  width: 100%;
-  max-width: 250px;
-  min-height: 100%;
-  padding: 20px;
-  visibility: hidden;
-  z-index: 2;
-  transition: 0.35s ease;
-}
-.navbar.active {
-  transform: translateX(280px);
-  visibility: visible;
-  transition: cubic-bezier(0.33, 0.85, 0.56, 1.02);
-}
-.navbar-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-block: 20px;
-}
-.navbar-top .logo {
-  color: var(--plava);
-  font-size: 2.3rem;
+header .btn{
+  padding: 10px 20px;
+  text-transform: uppercase;
   font-weight: 700;
-}
-.nav-close-btn {
-  color: var(--crna);
-  font-size: 2.8rem;
-  padding: 4px;
-}
-header ul li:not(:last-child) {
-  border-bottom: 1px solid var(--siva);
-}
-header ul {
-  align-items: center;
-}
-header ul li {
-  padding-top: 10px;
-}
-header ul li a {
-  color: var(--plava);
-  font-size: 1.5rem;
-  font-weight: 600;
-  padding-block: 60px;
-  align-items: center;
-}
-.overlay {
-  position: fixed;
-  inset: 0;
-  background-color: var(--back);
-  z-index: 1;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.35s ease;
-}
-.overlay.active {
-  opacity: 1;
-  pointer-events: all;
 }
 
 /*----------------HERO-----------------*/
 .hero {
+  display: grid;
+  place-items: center;
   background-image: url("images/hero-bg-bottom.png"), linear-gradient(135deg, #1c1c1c, #383838);
   background-repeat: no-repeat;
   background-position: bottom, center, center;
   background-size: auto, cover, auto;
-  padding-block-start: 120px;
-  padding-block-end: 60px;
+  padding-block-start: 100px;
+  height: 100vh;
 }
-.hero-content {
+.hero .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 30px;
+}
+.hero .content {
   margin-block-end: 60px;
+  max-width: 600px;
 }
 .hero p {
   color: var(--zuta);
@@ -281,8 +256,17 @@ header ul li a {
   font-size: 1.5rem;
   margin-block-end: 30px;
 }
+.hero .banner{
+  width: 694px;
+  height: 529px;
+}
 
 /*----------------ABOUT----------------*/
+.about .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+}
 .about img { 
   margin-block-end: 30px; 
 }
@@ -299,6 +283,7 @@ header ul li a {
 }
 .about ul {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
 }
 .about ul li {
@@ -316,6 +301,7 @@ header ul li a {
 /*--------------SERVICES---------------*/
 .service-list {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 15px;
 }
 .service-card {
@@ -372,6 +358,15 @@ header ul li a {
 
 
 /*--------------FEATURES--------------*/
+.features{
+  display: flex;
+  flex-direction: column;
+}
+.features .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
 .features .card {
   display: flex;
   align-items: flex-start;
@@ -400,14 +395,16 @@ header ul li a {
   line-height: 1.6;
 }
 /*----------------BLOG----------------*/
-.blog {
-  padding-bottom: 120px;
-}
 .blog-list {
   display: grid;
   gap: 15px;
+  grid-template-columns: 1fr 1fr;
+
 }
 .blog-card {
+  display: grid;
+  grid-template-columns: 0.75fr 1fr;
+  gap: 20px;
   padding: 20px;
   box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
   border-radius: 12px;
@@ -415,7 +412,6 @@ header ul li a {
 .blog-card .banner {
   border-radius: 12px;
   overflow: hidden;
-  margin-bottom: 15px;
 }
 .blog-card .banner img {
   transition: 0.35s ease;
@@ -432,9 +428,6 @@ header ul li a {
 }
 .blog-card a:is(:hover, :focus) {
   color: #86201e;
-}
-.blog-card p {
-  margin-bottom: 15px;
 }
 .blog-card .meta {
   display: flex;
@@ -464,11 +457,18 @@ header ul li a {
 
 /*---------------FOOTER---------------*/
 .footer {
+  display: flex;
+  justify-content: center;
   padding: 40px 0 10px 0;
   font-size: 1.5rem;
   background: url("images/footer-bg.png") no-repeat center, linear-gradient(135deg, #1c1c1c, #383838);
   background-size: auto, 200%;
   color: var(--bela);
+}
+.footer-top .container {
+  display: grid;
+  grid-template-columns: 1fr 0.5fr 0.7fr 0.5fr 1fr;
+  gap: 30px 50px;
 }
 .footer a {
   color: var(--bela);
@@ -549,327 +549,6 @@ header ul li a {
   visibility: visible;
   opacity: 1;
   transform: translateY(-10px);
-}
-
-/*---------------MEDIA----------------*/
-/*---------------MEDIA----------------*/
-/*---------------MEDIA----------------*/
-/*---------------MEDIA----------------*/
-/*---------------MEDIA----------------*/
-@media (min-width: 550px) {
-
-  /**
-   * REUSED STYLE
-   */
-
-  .container {
-    max-width: 550px;
-    margin-inline: auto;
-  }
-
-  .section-title { --fs-3: 3.6rem; }
-
-
-
-  /**
-   * HEADER
-   */
-
-  .header .btn {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    margin-inline-start: auto;
-  }
-
-
-
-  /**
-   * ABOUT
-   */
-
-  .about ul { grid-template-columns: repeat(3, 1fr); }
-
-
-
-  /**
-   * BLOG
-   */
-
-  .blog-card {
-    display: grid;
-    grid-template-columns: 0.75fr 1fr;
-    gap: 20px;
-    padding: 30px;
-  }
-
-  .blog-card .banner { margin-block-end: 0; }
-
-  .blog-card .banner a { height: 100%; }
-
-
-
-  /**
-   * FOOTER
-   */
-
-  .footer-brand,
-  .footer-list:not(:last-child) { margin-block-end: 0; }
-
-  .footer-top .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px 50px;
-  }
-
-}
-
-
-
-
-
-/**
- * responsive for larger than 768px screen
- */
-
-@media (min-width: 768px) {
-
-  /**
-   * REUSED STYLE
-   */
-
-  .container { max-width: 720px; }
-
-
-
-  /**
-   * HERO
-   */
-
-  .hero {
-    min-height: 600px;
-    display: grid;
-    place-items: center;
-  }
-
-  .hero-content { margin-block-end: 0; }
-
-  .hero .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    gap: 30px;
-  }
-
-
-
-  /**
-   * SERVICE
-   */
-
-  .service-list { grid-template-columns: 1fr 1fr; }
-
-
-
-  /**
-   * FEATURES
-   */
-
-  .features-list > li:first-child { margin-block-end: 0; }
-
-  .features-list {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 25px;
-  }
-
-
-
-  /**
-   * FOOTER
-   */
-
-  .footer-top .container { grid-template-columns: repeat(3, 1fr); }
-
-}
-
-
-
-
-
-/**
- * responsive for larger than 992px screen
- */
-
-@media (min-width: 992px) {
-
-  /**
-   * CUSTOM PROPERTY
-   */
-
-  :root {
-
-    /**
-     * typography
-     */
-
-    --fs-1: 5.4rem;
-
-  }
-
-
-
-  /**
-   * REUSED STYLE
-   */
-
-  .container { max-width: 950px; }
-
-
-
-  /**
-   * HEADER
-   */
-
-  .header { padding-block: 20px; }
-
-  .overlay,
-  .nav-open-btn,
-  .navbar-top { display: none; }
-
-  .navbar,
-  .navbar.active {
-    all: unset;
-    margin-inline-start: auto;
-  }
-
-  .header .btn { margin-inline-start: 0; }
-
-  header ul {
-    display: flex;
-    gap: 25px;
-  }
-
-  header ul li:not(:last-child) { border-bottom: none; }
-
-  header ul li a { color: var(--color); }
-
-
-
-  /**
-   * HERO
-   */
-
-  .hero { min-height: 700px; }
-
-
-
-  /**
-   * ABOUT
-   */
-
-  .about .container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-  }
-
-
-
-  /**
-   * SERVICE
-   */
-
-  .service-list { grid-template-columns: repeat(3, 1fr); }
-
-
-
-  /**
-   * FEATURES
-   */
-
-  .features-list { grid-template-columns: 1fr; }
-
-  .features .container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-  }
-
-  .features .section-title { grid-column: 1 / 4; }
-
-  .features-banner {
-    margin-block: 0;
-    display: grid;
-    place-items: center;
-  }
-
-
-
-  /**
-   * FOOTER
-   */
-
-  .footer-top .container { grid-template-columns: repeat(4, 1fr); }
-
-  .footer-brand { grid-column: 1 / 5; }
-
-  .footer-brand .text { max-width: 45ch; }
-
-}
-
-
-
-
-
-/**
- * responsive for larger than 1200px screen
- */
-
-@media (min-width: 1200px) {
-
-  /**
-   * REUSED STYLE
-   */
-
-  .container { max-width: 1200px; }
-
-  .section-title { --fs-3: 4.6rem; }
-
-
-
-  /**
-   * HERO
-   */
-
-  .hero { min-height: 800px; }
-
-
-
-  /**
-   * BLOG
-   */
-
-  .blog-list { grid-template-columns: 1fr 1fr; }
-
-  .blog-card { height: 100%; }
-
-  .blog-card .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-
-
-  /**
-   * FOOTER
-   */
-
-  .footer-top .container { grid-template-columns: 1fr 0.5fr 0.7fr 0.5fr 1fr; }
-
-  .footer-brand { grid-column: auto; }
-
 }
 
 /* ----------- PORTAL ----------- */
