--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
   text-decoration: none;
   outline: none;
   -webkit-tap-highlight-color: transparent;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
 }
 .unselectable {
   -moz-user-select: none;
@@ -190,7 +192,7 @@ header ul li a:hover {
   color: var(--dark);
   transform: translateY(1px);
 }
-header .logo {
+.logo {
   display: flex;
   align-items: center;
   font-family: 'Source Sans Pro', sans-serif;
@@ -199,17 +201,17 @@ header .logo {
   color: var(--bela);
   transition: 0.3s;
 }
-header .logo:hover {
+.logo:hover {
   color: var(--dark);
   transform: translateY(1px);
 }
-header .logo img {
+.logo img {
   width: 50px;
   height: auto;
   margin-right: 15px;
   transition: 0.3s;
 }
-header .logo:hover img {
+.logo:hover img {
   transform: rotate(360deg);
 }
 header .btn{
@@ -262,10 +264,14 @@ header .btn{
 }
 
 /*----------------ABOUT----------------*/
+.about{
+  height: 100vh;
+}
 .about .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  align-items: center;
 }
 .about img { 
   margin-block-end: 30px; 
@@ -285,6 +291,7 @@ header .btn{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
+  margin-top: 30px;
 }
 .about ul li {
   text-align: center;
@@ -296,6 +303,50 @@ header .btn{
   color: var(--plava);
   font-size: 3.8rem;
   font-weight: 700;
+}
+
+/*--------------FEATURES--------------*/
+.features {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 50px 0;
+}
+.features .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.features .card {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 20px 10px;
+  transition: all 0.3s ease;
+}
+.features .card:hover {
+  transform: translateY(-5px);
+}
+.features .card ion-icon {
+  background-image: linear-gradient(135deg, #de201d, #86201e, #000000);
+  background-size: 200%;
+  color: var(--bela);
+  min-width: max-content;
+  font-size: 40px;
+  padding: 22px;
+  border-radius: 50%;
+  transition: background-color 0.15s ease;
+  --ionicon-stroke-width: 20px;
+  aspect-ratio: 1/1;
+}
+.features .card h3 {
+  margin-bottom: 5px;
+  font-size: 26px;
+  color: var(--plava);
+}
+.features .card p {
+  font-size: 1.4rem;
+  color: #51558a;
 }
 
 /*--------------SERVICES---------------*/
@@ -354,60 +405,37 @@ header .btn{
   color: #fff;
   background-color: #91201f;
 }
-/*--------------PRICING---------------*/
 
-
-/*--------------FEATURES--------------*/
-.features{
+/*----------------BLOG----------------*/
+.blog {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  padding: 50px 0;
 }
-.features .container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-}
-.features .card {
+.blog .content{
   display: flex;
-  align-items: flex-start;
-  gap: 20px;
+  justify-content: space-between;
+  flex-direction: column;
 }
-.features .card ion-icon {
-  background-image: linear-gradient(135deg, #de201d, #86201e, #000000);;
-  background-size: 200%;
-  color: var(--bela);
-  min-width: max-content;
-  font-size: 40px;
-  padding: 22px;
-  border-radius: 50%;
-  transition: background-color 0.15s ease;
-  --ionicon-stroke-width: 20px;
-  aspect-ratio: 1/1;
-}
-.features .card h3 {
-  margin-bottom: 5px;
-  font-size: 26px;
-  color: var(--plava);
-}
-.features .card p {
-  font-size: 1.5rem;
-  color: #51558a;
-  line-height: 1.6;
-}
-/*----------------BLOG----------------*/
 .blog-list {
   display: grid;
   gap: 15px;
   grid-template-columns: 1fr 1fr;
-
 }
 .blog-card {
   display: grid;
+  justify-content: space-between;
   grid-template-columns: 0.75fr 1fr;
   gap: 20px;
   padding: 20px;
   box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
   border-radius: 12px;
+}
+.blog .banner img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .blog-card .banner {
   border-radius: 12px;
@@ -416,7 +444,6 @@ header .btn{
 .blog-card .banner img {
   transition: 0.35s ease;
 }
-
 .blog-card .banner a:is(:hover, :focus) img {
   transform: scale(1.1);
 }
@@ -445,14 +472,15 @@ header .btn{
   --ionicon-stroke-width: 35px;
 }
 .publish-date,
-.comment {
+.share {
   display: flex;
   align-items: center;
   gap: 8px;
 }
-.comment {
-  color: inherit;
-  margin-left: auto;
+.blog #view{
+  margin: 2% auto;
+  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
+  border-radius: 12px;
 }
 
 /*---------------FOOTER---------------*/
@@ -531,24 +559,52 @@ header .btn{
   text-decoration: none;
   color: #d3ad7f;
 }
-.back-to-top {
+#back-to-top {
   position: fixed;
-  bottom: 0;
-  right: 15px;
-  background-color: #de201d;
-  color: var(--bela);
-  font-size: 2rem;
-  padding: 14px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 15px #de201d;
-  z-index: 1000;
-  visibility: hidden;
-  transition: 0.15s ease;
+  color: #af0b0b;
+  bottom: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 10000;
 }
-.back-to-top.active {
-  visibility: visible;
-  opacity: 1;
-  transform: translateY(-10px);
+#back-to-top.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+#progress {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotate(-90deg);
+}
+#progress circle {
+  stroke: var(--crvena);
+  stroke-width: 2px;
+  stroke-dasharray: 157;
+  stroke-dashoffset: 157;
+  transition: stroke-dashoffset 0.25s;
+}
+#backToTop {
+  background-color: transparent;
+  color: var(--crvena);
+  border: none;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  cursor: pointer;
+  outline: none;
+  z-index: 10000;
 }
 
 /* ----------- PORTAL ----------- */
