--- a/style.css
+++ b/style.css
@@ -128,24 +128,6 @@ section{
 :is(.service-card, .features-card, .blog-card) .text { 
   font-size: 1.5rem; 
 }
-.btn {
-  background-image: linear-gradient(135deg, #de201d, #86201e, #000000);
-  background-size: 200%;
-  color: var(--bela);
-  padding: 12px 35px;
-  font-size: 1.5rem;
-  font-weight: 500;
-  border-radius: 5px 25px;
-  transition: 0.35s ease;
-}
-.btn ion-icon{
-  font-size: 23px;
-  margin-left: 5%;
-}
-.btn:is(:hover, :focus) { 
-  color: var(--bela);
-  background-position: right;
-}
 
 /*---------------HEADER----------------*/ 
 header {
@@ -154,9 +136,10 @@ header {
   align-items: center;
   width: 100%;
   padding: 20px 150px;
-  position: absolute;
+  position: fixed;
+  top: 0;
   z-index: 1000;
-  transition: 0.3s ease-in-out;
+  transition: 0.3s;
   background: transparent;
 }
 header ul {
@@ -176,6 +159,25 @@ header ul li a {
 header ul li a:hover {
   color: var(--dark);
   transform: translateY(1px);
+}
+header .btn {
+  background-image: linear-gradient(135deg, #de201d, #86201e, #000000);
+  background-size: 200%;
+  color: var(--bela);
+  padding: 10px 20px;
+  margin-left: 5px;
+  font-weight: 700;
+  border-radius: 5px 25px;
+  transition: 0.3s;
+}
+header .btn ion-icon{
+  display: inline-block;
+  padding-left: 5px;
+  font-size: 23px;
+}
+header .btn:is(:hover, :focus) { 
+  color: var(--bela);
+  background-position: right;
 }
 .logo {
   display: flex;
@@ -199,10 +201,25 @@ header ul li a:hover {
 .logo:hover img {
   transform: rotate(360deg);
 }
-header .btn{
-  padding: 10px 20px;
-  text-transform: uppercase;
-  font-weight: 700;
+/* Header aktivan */
+header.active {
+  transition-delay: 1s;
+  background: var(--pozadina);
+}
+header.active .btn {
+  color: var(--bela);
+}
+header.active .btn:hover{
+  color: var(--bela);
+}
+.logo.active {
+  color: black;
+}
+header.active ul li a {
+  color: black;
+}
+header.active ul li a:hover {
+  color: #00000080;
 }
 
 /*----------------HERO-----------------*/
@@ -213,8 +230,9 @@ header .btn{
   background-size: cover, contain, cover;
   background-position: center top, center bottom, center;
   background-repeat: no-repeat, no-repeat, no-repeat;  
-  padding-block-start: 100px;
+  padding-top: 100px;
   height: 100vh;
+  overflow: hidden;
 }
 .hero .container {
   display: grid;
@@ -225,6 +243,9 @@ header .btn{
 .hero .content {
   margin-block-end: 60px;
   max-width: 600px;
+  opacity: 0;
+  transform: translateX(-20%);
+  animation: slideInLeft 0.5s forwards ease-out;
 }
 .hero p {
   color: var(--zuta);
@@ -234,18 +255,62 @@ header .btn{
 }
 .hero h1 {
   color: var(--bela);
-  font-size: 4.2rem;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 3.6rem;
+  line-height: 45px;
   margin-block-end: 20px;
 }
 .hero #text {
-  color: var(--bela);
+  color: #aaaaaa;
   font-size: 1.5rem;
   margin-block-end: 30px;
 }
-.hero .banner{
+.hero .btn {
+  display: flex;
+  align-items: center;
+  color: var(--bela);
+  background: transparent;
+  padding: 0;
+  position: relative;
+  transition: 0.3s;
+  transform-origin: left center;
+}
+.hero .btn ion-icon {
+  font-size: 20px;
+  border-radius: 50%;
+  border: 2px solid var(--crvena);
+  padding: 8px;
+  margin-left: 4%;
+  transition: 0.3s;
+}
+.hero .btn:hover {
+  color: var(--crvena);
+  transform: scale(1.05);
+}
+.hero .btn:hover ion-icon {
+  transform: rotate(-360deg) scale(1.05);
+  background: var(--crvena);
+  border-color: transparent;
+  color: white;
+  margin-left: 6px;
+}
+.hero .banner {
   width: 694px;
   height: 529px;
+  opacity: 0;
+  transform: translateX(20%);
+  animation: slideInRight 0.5s forwards ease-out;
+}
+@keyframes slideInLeft {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes slideInRight {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 /*----------------ABOUT----------------*/
@@ -332,63 +397,6 @@ header .btn{
 .features .card p {
   font-size: 1.4rem;
   color: #51558a;
-}
-
-/*--------------SERVICES---------------*/
-.service-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 15px;
-}
-.service-card {
-  padding: 30px;
-  background-color: var(--bela);
-  box-shadow: 0 5px 20px 1px rgba(31, 66, 137, 0.102);
-  border-radius: 12px;
-  text-align: center;
-  min-height: 400px;
-}
-.service-card .card-icon {
-  background-image: url("images/service-banner-pattern.png"),linear-gradient(135deg, #de201d, #86201e, #000000);
-  background-repeat: no-repeat;
-  background-size: contain;
-  aspect-ratio: 1/1;
-  max-width: 165px;
-  display: grid;
-  place-content: center;
-  margin: 0 auto 20px;
-  transition: 0.15s ease;
-}
-.service-card .card-icon ion-icon {
-  font-size: 5rem;
-  color: var(--bela);
-  --ionicon-stroke-width: 20px;
-  transition: 0.15s ease;
-}
-.service-card:hover .card-icon ion-icon { 
-  color: var(--sivlj); 
-}
-.service-card h3 {
-  margin-bottom: 15px;
-  font-size: 2rem;
-  color: var(--plava);
-}
-.service-card p {
-  margin-bottom: 20px;
-  font-size: 1.5rem;
-  color: #51558a;
-}
-.service-card .card-btn {
-  margin: 0 auto;
-  padding: 15px;
-  border: 1px solid #91201f;
-  border-radius: 50%;
-  color: #91201f;
-  transition: 0.15s ease;
-}
-.service-card .card-btn:hover {
-  color: #fff;
-  background-color: #91201f;
 }
 
 /*----------------BLOG----------------*/
