--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ header.active ul li a:hover {
   color: var(--bela);
   background: transparent;
   padding: 0;
+  font-weight: 500;
   position: relative;
   transition: 0.3s;
   transform-origin: left center;
@@ -317,6 +318,9 @@ header.active ul li a:hover {
 .about{
   height: 100vh;
 }
+.about .naslov{
+  margin-bottom: 7%;
+}
 .about .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -335,17 +339,15 @@ header.active ul li a:hover {
 }
 .about p {
   font-size: 1.5rem;
-  margin-block-end: 20px;
 }
 .about ul {
+  margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-  margin-top: 30px;
+  gap: 15px;
 }
 .about ul li {
   text-align: center;
-  padding: 15px;
   box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
   border-radius: 12px;
 }
@@ -353,6 +355,42 @@ header.active ul li a:hover {
   color: var(--plava);
   font-size: 3.8rem;
   font-weight: 700;
+}
+.about ul li p {
+  margin-bottom: 10px;
+}
+/* ANIMACIJE */
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 /*--------------FEATURES--------------*/
@@ -437,6 +475,17 @@ header.active ul li a:hover {
 .blog-card .banner img {
   transition: 0.35s ease;
 }
+.blog-card .banner video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.35s ease;
+  border-radius: 12px; /* Dodajemo border-radius da se video uklopi sa ostalim elementima */
+}
+.blog-card .banner a:is(:hover, :focus) video {
+  transform: scale(1.1);
+}
+
 .blog-card .banner a:is(:hover, :focus) img {
   transform: scale(1.1);
 }
@@ -471,9 +520,20 @@ header.active ul li a:hover {
   gap: 8px;
 }
 .blog #view{
+  background-image: linear-gradient(135deg, #de201d, #86201e, #000000);
+  background-size: 200%;
+  color: var(--bela);
   margin: 2% auto;
+  font-weight: 700;
+  padding: 10px 20px;
   box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
   border-radius: 12px;
+  transition: 0.3s;
+}
+.blog #view:is(:hover, :focus) { 
+  color: var(--bela);
+  transform: translateY(1px);
+  background-position: right;
 }
 
 /*---------------FOOTER---------------*/
