--- a/style.css
+++ b/style.css
@@ -437,16 +437,106 @@ header.active ul li a:hover {
   color: #51558a;
 }
 
+/*---------------RADOVI---------------*/
+.radovi {
+  display: flex;
+  flex-direction: column;
+  padding: 60px 20px;
+  background-color: #F4F3F2;
+  text-align: center;
+}
+.radovi h2{
+  margin-top: 3%;
+}
+.video-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+}
 
+.video-card {
+  position: relative;
+  width: 320px;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.video-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 25px 35px rgba(0, 0, 0, 0.3);
+}
+
+.video-card video {
+  width: 100%;
+  border-radius: 20px;
+  display: block;
+}
+
+.video-title {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background: rgba(0, 0, 0, 0.6);
+  color: #ffffff;
+  padding: 5px 15px;
+  border-radius: 50px;
+  font-size: 0.9em;
+  letter-spacing: 0.5px;
+  font-weight: 500;
+}
+
+.mute-btn {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  background: #1C1C1C;
+  color: #ffffff;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+  transition: background 0.3s;
+}
+
+.mute-btn:hover {
+  background: #333333;
+}
+
+.mute-btn .icon {
+  font-size: 1.2em;
+  transition: transform 0.3s;
+}
+
+.mute-btn:hover .icon {
+  transform: scale(1.2);
+}
+
+@media (max-width: 768px) {
+  .video-card {
+      width: 100%;
+  }
+}
+
+
+
+/*------------TESTIMONIALS------------*/
 .testimonial {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
-
 .testimonial .container {
-  background-color: #222;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.37);
+  background-color: var(--pozadina);
+  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.2);
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -456,7 +546,6 @@ header.active ul li a:hover {
   border-radius: 12px;
   position: relative;
 }
-
 .testimonial-nav-left,
 .testimonial-nav-right {
   position: absolute;
@@ -470,18 +559,14 @@ header.active ul li a:hover {
   transition: transform 0.3s ease, background-color 0.3s ease;
   cursor: pointer;
 }
-
 .testimonial-nav-left {
   left: 0;
   transform: translateX(-50%) translateY(-50%);
 }
-
 .testimonial-nav-right {
   right: 0;
   transform: translateX(50%) translateY(-50%);
 }
-
-/* Hover efekti za navigacione dugmadi */
 .testimonial-nav-left:hover {
   transform: translateY(-50%) scale(1.1) translateX(-55%);
 }
@@ -495,46 +580,64 @@ header.active ul li a:hover {
   width: 100%;
   position: relative;
 }
-
+.testimonial-content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1;
+  padding-left: 20px;
+  color: #222;
+}
+.testimonial-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.testimonial-logo {
+  margin-right: 10px;
+  width: 50px;
+  height: 50px;
+}
+.testimonial-title {
+  color: #000;
+  font-weight: bold;
+  font-size: 20px;
+}
+.testimonial-text {
+  font-size: 15px;
+  line-height: 1.5;
+}
 .testimonial-item {
   display: none;
   flex-shrink: 0;
   width: 100%;
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
-
-.testimonial-item.active {
-  display: flex;
-  opacity: 1;
-  transform: scale(1.0) rotateY(0deg);
-}
-
-.testimonial-item.prev {
-  transform: translateX(-100%) scale(0.9) rotateY(20deg);
-  opacity: 0.5;
-}
-
-.testimonial-item.next {
-  transform: translateX(100%) scale(0.9) rotateY(-20deg);
-  opacity: 0.5;
-}
-
-/* Animacija za slike */
 .testimonial-image {
   padding: 10px;
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
-
 .testimonial-image img {
   border-radius: 10px;
   transition: transform 0.5s ease;
 }
-
-/* Efekat za tekst sa dinamičnim ulaskom */
+.testimonial-item.active {
+  display: flex;
+  opacity: 1;
+  transform: scale(1.0) rotateY(0deg); 
+  animation: slideIn 1s ease-out;
+}
+.testimonial-item.prev {
+  transform: translateX(-100%) scale(0.9) rotateY(20deg);
+  opacity: 0.5;
+}
+.testimonial-item.next {
+  transform: translateX(100%) scale(0.9) rotateY(-20deg);
+  opacity: 0.5;
+}
 .testimonial-item.active .testimonial-content {
   animation: dynamicEnter 0.7s ease-out forwards;
 }
-
 @keyframes dynamicEnter {
   0% {
     opacity: 0;
@@ -549,12 +652,6 @@ header.active ul li a:hover {
     transform: translateY(0) rotate(0deg);
   }
 }
-
-/* Animacija za prelaz između stavki */
-.testimonial-item.active {
-  animation: slideIn 1s ease-out;
-}
-
 @keyframes slideIn {
   0% {
     opacity: 0;
@@ -565,39 +662,6 @@ header.active ul li a:hover {
     transform: translateX(0);
   }
 }
-
-.testimonial-content {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex: 1;
-  padding-left: 20px;
-  color: white;
-}
-
-.testimonial-header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
-.testimonial-logo {
-  margin-right: 10px;
-  width: 50px;
-  height: 50px;
-}
-
-.testimonial-title {
-  color: #fff;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.testimonial-text {
-  font-size: 15px;
-  line-height: 1.5;
-}
-
 
 /*----------------BLOG----------------*/
 .blog {
@@ -622,7 +686,7 @@ header.active ul li a:hover {
   grid-template-columns: 0.75fr 1fr;
   gap: 20px;
   padding: 20px;
-  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.1);
+  box-shadow: 0 5px 20px 1px hsla(220, 63%, 33%, 0.2);
   border-radius: 12px;
 }
 .blog .banner img{
